<resources>
    <string name="app_name">SoS-IT</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="login">Login</string>
    <string name="todo">TODO</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="verify">Verify</string>
    <string name="kartru">Kartru</string>
    <string name="karma">Karma</string>
    <string name="home">Home</string>
    <string name="cart">Cart</string>
    <string name="pic">Pic</string>
    <string name="settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Continue">Continue</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="enter_your_mail">Enter Your Mail</string>
    <string name="save_changes">Save Changes</string>
    <string name="delivery_location"><b>Add Delivery Location</b></string>
    <string name="restaurants">Restaurants</string>
    <string name="groceries">Groceries</string>
    <string name="pickup">Pickup</string>
    <string name="what_s_on_your_mind">What\'s on your mind?</string>
    <string name="top_curations_for_you">Top Curations for you</string>
    <string name="pharmacy">Pharmacy</string>
    <string name="pet_supplies">Pet Supplies</string>
    <string name="services">Services</string>
    <string name="pizzas">Pizzas</string>
    <string name="burgers">Burgers</string>
    <string name="coffee">Coffee</string>
    <string name="biryani">Biryani</string>
    <string name="icecreams">Ice Cream</string>
    <string name="rolls">Rolls</string>
    <string name="sandwiches">Tacos</string>
    <string name="cakes">Cakes</string>
    <string name="south_ind">South</string>
    <string name="north">North</string>
    <string name="chinese">Chinese</string>
    <string name="milkshakes">Shakes</string>
    <string name="popular_brands">Popular Places</string>
    <string name="kfc">KFC</string>
    <string name="mcdonald_s">McD</string>
    <string name="ccd">CCD</string>
    <string name="domino_s">Domino\'s</string>
    <string name="my_favourite_flavour_of_cake_is_more">My favourite flavour of cake is more!!</string>
    <string name="some_foodie">-Some Foodie</string>
    <string name="prescribed_medicines">Prescribed Medicines</string>
    <string name="first_aid">First Aid</string>
    <string name="cold_relief">Cold Relief</string>
    <string name="pain_relief">Pain Relief</string>
    <string name="digestives_and_laxatives">Digestives And Laxatives</string>
    <string name="skin_and_foot_care">Skin and Foot Care</string>
    <string name="healthcare_devices">Healthcare Devices</string>
    <string name="joint_care">Joint Care</string>
    <string name="textview">TextView</string>
    <string name="add_your_prescription_here">Add your prescription here</string>
    <string name="search_your_cravings">Search for your cravings....</string>
    <string name="view_cart">View Cart</string>
    <string name="plus_taxes">plus taxes</string>
    <string name="delivering_to">Delivering to</string>
    <string name="select_an_address">Select an Address</string>
    <string name="add_a_new_address">Add a new address</string>
    <string name="saved_addresses">Saved Addresses</string>
    <string name="enter_your_address">Enter your Address</string>
    <string name="complete_address">Complete Address*</string>
    <string name="floor_optional">Floor(Optional)</string>
    <string name="how_to_reach_optional">How to reach(optional)</string>
    <string name="enter_address_details">Enter address details</string>
    <string name="change">Change</string>
    <string name="your_location">Your Location</string>
    <string name="place_order">Place Order</string>
    <string name="add">Add</string>
    <string name="we_follow_all_safety_measures_to_ensure_your_food_is_safe">We follow all safety measures to ensure your food is safe.</string>
    <string name="nothing_to_see_here">Nothing to see here</string>
    <string name="adult_dog_foods">Adult Dog Foods</string>
    <string name="puppy_foods">Puppy Foods</string>
    <string name="dog_treats">Dog Treats</string>
    <string name="kitten_foods">Kitten Foods</string>
    <string name="adult_cat_foods">Adult Cat Foods</string>
    <string name="cat_treats">Cat Treats</string>
    <string name="pet_grooming">Pet Grooming</string>
    <string name="toys">Toys</string>
    <string name="pet_medicines">Pet Medicines</string>
    <string name="order_placed">Order Placed</string>
    <string name="you_will_be_able_to_track_your_order_as_soon_as_someone_accepts_it_happy_shopping">You will be able to track your order,as soon as someone accepts it.Happy Shopping!!</string>
    <string name="our_executive_will_get_back_to_you_with_the_total_payable_amount_once_they_reach_the_nearest_pharmacy_hang_on">Our executive will get back to you with the total payable amount, once they reach the nearest pharmacy.Hang On!!!</string>
    <string name="prescription_added">Prescription Added</string>
    <string name="dots">.</string>
    <string name="accept">Accept</string>
    <string name="dotss">...</string>
    <string name="don_t_be_shy_tell_us_your_name">Don\'t be shy,Tell us your name</string>
    <string name="your_earnings">Your Earnings</string>
    <string name="item_total">Item Total</string>
    <string name="delivery_charge">Delivery Charge</string>
    <string name="taxes">Taxes</string>
    <string name="u20b9_30">₹ 30</string>
    <string name="pay_using">Pay Using</string>
    <string name="paying_using">Paying Using</string>
    <string name="service_name">Service Name</string>
</resources>