<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkgrey"
    tools:context=".main.Login">

    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:backgroundTint="@color/orange"
        android:text="@string/login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/guideline3"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="@id/guideline2" />

    <EditText
        android:id="@+id/phone"
        android:layout_width="179dp"
        android:layout_height="49dp"
        android:autofillHints=""
        android:backgroundTint="@color/white"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/enter_mobile_number"
        android:inputType="phone"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toTopOf="@id/nameev"
        app:layout_constraintEnd_toStartOf="@id/guideline3"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintStart_toStartOf="@id/guideline2" />

    <EditText
        android:layout_width="179dp"
        android:layout_height="49dp"
        android:id="@+id/nameev"
        android:autofillHints=""
        android:backgroundTint="@color/white"
        android:ems="19"
        android:gravity="center"
        android:hint="@string/enter_your_name"
        android:inputType="textPersonName"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toStartOf="@id/guideline3"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintStart_toStartOf="@id/guideline2"
        app:layout_constraintBottom_toTopOf="@id/btn_login"/>



    <ImageView
        android:id="@+id/imageView"
        android:layout_width="413dp"
        android:layout_height="424dp"
        app:layout_constraintBottom_toTopOf="@id/progressBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        android:contentDescription="@string/todo"
        app:srcCompat="@drawable/student_login" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.75" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="61dp"
        android:layout_height="60dp"
        android:layout_marginBottom="32dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@id/phone"
        app:layout_constraintEnd_toStartOf="@id/guideline3"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="@id/guideline2" />

</androidx.constraintlayout.widget.ConstraintLayout>